<resources>
    <string name="app_name">MedMinder</string>
    <string name="date_format"        >MMM DD,YYYY</string>
    <string name="time_format"        >HH:MM A</string>
    <string name="save_label"         >Save</string>
    <string name="save_successful"    >Save Successful</string>
    <string name="save_unsuccessful"        >Save not successful</string>
    <string name="exit_label"         >Exit</string>
    <string name="hint_label"         >Hint</string>
    <string name="cancel_label"       >Cancel</string>
    <string name="exception_medication_not_added">Could not add medication</string>
    <string name="exportHistoryLabel" >Export</string>
    <string name="list_label"         >Title</string>
    <string name="true_label"         >True</string>
    <string name="false_label"        >False</string>
    <string name="up_arrow"           >\u0024</string>
    <string name="down_arrow"         >\u0025</string>
    <string name="up_label"           >"▲"</string>
    <string name="down_label"         >"▼"</string>
    <string name="one_string"         >1</string>
    <string name="zero_string"        >00</string>
    <string name="time_to_take"        >Time to take</string>
    <string name="time_to_send_alert"  >Time to send Overdue Alert</string>
    <string name="action_settings"      >Settings</string>
    <string name="action_export"        >Export</string>
    <string name="action_list_schedules">List Medication Schedule</string>
    <string name="action_home"          >Home</string>
    <string name="action_switch_patient">Switch Patient - Patient List</string>
    <string name="action_edit_patient"  >Edit Patient Profile</string>
    <string name="action_med_alert"     >Text/Email Alerts</string>
    <string name="action_med_help"      >Help with Meds Order</string>
    <string name="action_midnight_noon">12 am is midnight, 12 pm is noon</string>
    <string name="add_person"           >Add New Person</string>
    <string name="add_medication"       >Add New Medication to %s</string>
    <string name="add_schedule"         >Schedule new dose to %s</string>
    <string name="add_noting"           >Nothing to Add</string>
    <string name="add_medicaition_alert">Add New Medication Alert</string>
    <string name="title_home"               >Home</string>
    <string name="title_person"             >Person Profile</string>
    <string name="title_patient"            >Patient</string>
    <string name="title_person_list"        >List People</string>
    <string name="title_medication"         >Medication Prescription</string>
    <string name="title_medication_list"    >List Medications</string>
    <string name="title_medication_alert"   >Medication Alerts</string>
    <string name="title_export_history"     >Export History</string>
    <string name="title_schedule_list"      >Medication Schedule List</string>
    <string name="title_history_title_line" >History Title Line Definition</string>
    <string name="title_settings"           >Settings</string>
    <string name="medication_screen_label"      >Medication Prescription</string>
    <string name="medication_id_label"          >Medication</string>
    <string name="medication_nick_name_label"   >Med Name</string>
    <string name="medication_brand_name_label"  >Brand Name</string>
    <string name="medication_generic_name_label">Generic Name</string>
    <string name="medication_for_label"         >Patient</string>
    <string name="medication_for_name"          >Person Name</string>
    <string name="medication_dose_strategy_label">Strategy</string>
    <string name="medication_dose_amount_label" >Amt</string>
    <string name="medication_dose_units_label"  >Unit</string>
    <string name="medication_num_label"         ># per day</string>
    <string name="number_hash_tag"              >#</string>
    <string name="medication_button_after_save" >Must save first before setting schedule</string>
    <string name="medication_sched_time_title"  >Enter time to take dose</string>
    <string name="medication_brand_name_hint"   >Enter Brand Name</string>
    <string name="medication_generic_name_hint" >Enter Generic Name</string>
    <string name="medication_nick_name_hint"    >Enter Nickname</string>
    <string name="medication_for_hint"          >Enter Person ID this medication is for</string>
    <string name="medication_order_hint"        >For Example: 5</string>
    <string name="medication_dose_amount_hint"  >For Example: 250</string>
    <string name="medication_dose_units_hint"   >For Example: mg</string>
    <string name="medication_num_per_day_hint"  >For Example: 2</string>
    <string name="medication_when_due_hint2"    >Leave When Due blank for as needed</string>
    <string name="strategy_hint_label"          >Strategy Hint</string>
    <string name="medication_strategy_hint"     >1 = schedule, 2 = as needed</string>
    <string name="medication_dose_time"         >Time</string>
    <string name="medication_dose_hours"        >Hours</string>
    <string name="medication_dose_minutes"      >Minutes</string>
    <string name="medication_dose_am_pm"        >A/P</string>
    <string name="medication_dose_am"           >AM</string>
    <string name="medication_dose_pm"           >PM</string>
    <string name="save_first"                   >Must SAVE before this function will work</string>
    <string name="wrong_strategy"               >Can not set schedule with is needed strategy</string>
    <string name="strategy_schedule"            >Sch</string>
    <string name="strategy_as_needed"           >A/N</string>
    <string name="id_abrev"                     >ID</string>
    <string name="person_screen_label"      >Person (Patient) Profile</string>
    <string name="person_label"             >Person</string>
    <string name="exists_label"             >Current?</string>
    <string name="person_id_label"          >Person ID</string>
    <string name="person_nick_name_label"   >Nick Name</string>
    <string name="person_email_addr_label"  >Email Addr</string>
    <string name="person_text_addr_label"   >Text Addr</string>
    <string name="person_is_patient_label"  >is patient?</string>
    <string name="person_save_first"        >Save before adding medications</string>
    <string name="horizontal_scroll_hint"   >Horizontal scroll to see all fields</string>
    <string name="person_nick_name_hint"   >Enter Nick Name</string>
    <string name="person_email_addr_hint"  >Only used for notifications</string>
    <string name="person_text_addr_hint"   >Only used for notifications</string>
    <string name="person_order_hint"       >By Nickname</string>
    <string name="person_duration_hint"    >For example: quarter, half, hourly</string>
    <string name="person_is_patient_hint"  >Yes</string>
    <string name="person_not_valid"        >Must have Nickname to define a Person</string>
    <string name="person_med_long_click"   >Medication Long Click</string>
    <string name="person_list_screen_label" >Person List</string>
    <string name="patient_nick_name_label"      >Select SWITCH PATIENT</string>
    <string name="patient_edit_profile_label"   >Edit Patient</string>
    <string name="patient_add_alerts_label"     >Add Alerts</string>
    <string name="patient_list_schedules_label" >List Schedules</string>
    <string name="select_patient_label"         >Switch Patient</string>
    <string name="patient_add_medication_label">Add Med</string>
    <string name="patient_medication_button"    >Med</string>
    <string name="patient_no_med_but"           >No Med Button Pushed</string>
    <string name="dose_default_date"            >00/00/0000</string>
    <string name="dose_default_time"            >00:00 am</string>
    <string name="reselect_dose"                >Re-select Dose to edit</string>
    <string name="error_parsing_date_time"      >Error parsing Date and / or Time</string>
    <string name="show_meds_help_label"         >Meds Order Help</string>
    <string name="input_received"    >Input received</string>
    <string name="start_date_label"                 >Start:</string>
    <string name="end_date_label"                   >End:</string>
    <string name="directory_path_label"             >Dir Path:</string>
    <string name="sub_directory_label"              >Sub-Dir:</string>
    <string name="filename_extent_label"            >File Suffix:</string>
    <string name="export_filename_label"            >File Name</string>
    <string name="export_file_extent"               >.txt</string>
    <string name="extent_hint"                      >Appended if file name exists</string>
    <string name="error_writing_file"               >ERROR writing file. Data not saved</string>
    <string name="error_unable_to_create_file">ERROR unable to create file. Data not saved</string>
    <string name="error_unable_to_access_storage"   >ERROR: unable to access storage. Data not saved</string>
    <string name="export_label"               >Export</string>
    <string name="export_prescription_label"  >Export Prescription</string>
    <string name="export_history_label"       >Export History</string>
    <string name="email_not_defined"          >Patient email address not defined</string>
    <string name="export_title_prescriptions" >Prescriptions for: %s</string>
    <string name="export_title_history"       >History of Doses taken for %s</string>
    <string name="export_day_hint"            >DD</string>
    <string name="export_month_hint"          >MM</string>
    <string name="export_year_hint"           >YY</string>
    <string name="export_day_error"           >Too many days for your month</string>
    <string name="export_month_error"         >Months must be less than or eaual to 12</string>
    <string name="export_year_error"          >Years must be less than or equal to 99</string>
    <string name="export_destinations"        >--------Destination of Exported Information---------</string>
    <string name="export_radio_email"         >Email</string>
    <string name="export_radio_text"          >Text</string>
    <string name="export_radio_file"          >File</string>
    <string name="export_radio_general"       >General</string>
    <string name="export_content"             >--------------Content to be Exported--------------</string>
    <string name="export_radio_history"       >History</string>
    <string name="export_radio_prescript"     >Prescription</string>
    <string name="export_chooser_title"       >Export to:</string>
    <string name="export_no_app"             >No app found on your phone which can perform this export</string>
    <string name="export_dialog_title"        >Export Options</string>
    <string name="export_dialog_message"      >Please Select Destination and Content:</string>
    <string name="export_file_written"        >Export file has been written</string>
    <string name="export_prescriptions"       >Prescriptions</string>
    <string name="export_history"             >History</string>
    <string name="sched_list_med_doesnt_exist">DOES NOT EXIST</string>
    <string name="sched_list_as_needed"       >As Needed</string>
    <string name="settings_current_patient"     >Patient</string>
    <string name="settings_default_time_due"    >Medications: Default Time Due for schedule</string>
    <string name="settings_default_time"        >Time</string>
    <string name="settings_earliest_history_date">Home: Earliest date of dose in history list</string>
    <string name="settings_history_date"        >Date</string>
    <string name="settings_incorrect_format"    >Time field incorrect, resetting....</string>
    <string name="settings_24format"            >Is Clock 24 hour format?</string>
    <string name="settings_show_deleted_people" >Show Deleted Persons?</string>
    <string name="settings_show_deleted_meds"   >Show Deleted Medications?</string>
    <string name="settings_notification_vibrate">Vibrate with Medication Notifications?</string>
</resources>