<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.androidchicken.medminder.MMMainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never"
        />
     <item
        android:id="@+id/action_list_schedules"
        android:orderInCategory="110"
        android:title="@string/action_list_schedules"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="120"
        android:title="@string/action_export"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_switch_patient"
        android:orderInCategory="130"
        android:title="@string/action_switch_patient"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_edit_patient"
        android:orderInCategory="140"
        android:title="@string/action_edit_patient"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_alert"
        android:orderInCategory="150"
        android:title="@string/action_med_alert"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_med_help"
        android:orderInCategory="150"
        android:title="@string/action_med_help"
        app:showAsAction="never"
        />



</menu>
