<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools=  "http://schemas.android.com/tools"

    android:id="@+id/content_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft=  "@dimen/activity_horizontal_margin"
    android:paddingRight= "@dimen/activity_horizontal_margin"
    android:paddingTop=   "@dimen/activity_vertical_margin"

    android:background="@color/colorScreenBackground"
    tools:context="com.androidchicken.medminder.MainActivityFragment"

    >

    <!-- This layout is for maintaining a Medication -->

    <!-- Container for entire screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Medication Attributes -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"


            >
            <!-- Row 1: Medication Screen Label -->
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:gravity="center"
                >
                <TextView
                    android:text="@string/medication_screen_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="50"

                    android:textSize="20sp"
                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorTitleBackground"
                    />
                <TextView
                    android:id="@+id/medicationForPerson"
                    android:text="@string/medication_for_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="center"

                    android:enabled="false"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorWhite"
                    />
            </TableRow>

            <!-- Row 2: Medication For Person, which the user may not change -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationForPersonInput"
                    android:text="@string/medication_for_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationForPersonInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_for_hint"
                    android:enabled="false"

                    android:inputType="text"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 3: Medication Nick Name -->
            <TableRow

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            >
            <TextView
                android:labelFor="@+id/medicationNickNameInput"
                android:text="@string/medication_nick_name_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:gravity="end"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorLabelBackground"
                />
            <EditText
                android:id="@id/medicationNickNameInput"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"

                android:hint="@string/medication_nick_name_hint"

                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
                android:layout_marginEnd="16dp"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorInputBackground"
                />

        </TableRow>

            <!-- Row 4: Medication Brand Name -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationBrandNameInput"
                    android:text="@string/medication_brand_name_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationBrandNameInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_brand_name_hint"

                    android:inputType="text"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 5: Medication Generic Name -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationGenericNameInput"
                    android:text="@string/medication_generic_name_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationGenericNameInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_generic_name_hint"

                    android:inputType="text"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 6:  -->


            <!-- Row 7: Dose Amount -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationDoseAmountInput"
                    android:text="@string/medication_dose_amount_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationDoseAmountInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_dose_amount_hint"

                    android:inputType="text"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 8: Medication Dose Units -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationDoseUnitsInput"
                    android:text="@string/medication_dose_units_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationDoseUnitsInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_dose_units_hint"

                    android:inputType="text"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 9: Medication Dose # -->
            <TableRow

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            >
            <TextView
                android:labelFor="@+id/medicationDoseNumInput"
                android:text="@string/medication_num_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:gravity="end"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorLabelBackground"
                />
            <EditText
                android:id="@id/medicationDoseNumInput"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"

                android:hint="@string/medication_num_per_day_hint"

                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
                android:layout_marginEnd="16dp"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorInputBackground"
                />

        </TableRow>

            <!-- Row 10: Medication Strategy -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:labelFor="@+id/medicationDoseStrategyInput"
                    android:text="@string/medication_dose_strategy_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <EditText
                    android:id="@id/medicationDoseStrategyInput"

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_when_due_hint"

                    android:inputType="text"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorInputBackground"
                    />

            </TableRow>

            <!-- Row 11: Medication When Due Hint -->
            <TableRow

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:text="@string/hint_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:gravity="end"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorLabelBackground"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="70"

                    android:hint="@string/medication_when_due_hint"

                    android:layout_marginEnd="16dp"

                    android:textColor="@color/colorTextBlack"
                    android:background="@color/colorScreenBackground"
                    />

            </TableRow>

        </TableLayout>

        <!-- Schedule Times -->
        <LinearLayout

            android:layout_height="wrap_content"
            android:layout_width= "match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingTop=    "10dp"
            >
            <!-- RecyclerView of History -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/scheduleList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <!-- Buttons Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <!-- Save Button -->
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/medicationSaveButton"
                android:text="@string/save_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center|center_vertical"
                android:layout_gravity="start"
                android:layout_weight="1"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorButton1Background"
                />

            <!-- Add Schedule Button -->
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/medicationAddScheduleButton"
                android:text="@string/medication_add_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center|center_vertical"
                android:layout_gravity="start"
                android:layout_weight="1"

                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorButton1Background"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
